# simd-rs63

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
src/: error.rs  gf8.rs  lib.rs  reed_solomon.rs
src/gf8/: lookup.rs  simd.rs
src/reed_solomon/: constants.rs  lanes.rs
