[package]
name = "reed-solomon"
version = "0.1.0"
edition = "2021"
description = "SIMD-accelerated Reed-Solomon RS(9,6) erasure coding over GF(2^8), with no unsafe code"
license = "MIT"
repository = "https://github.com/bonnetn/simd-rs63"
readme = "README.md"
keywords = ["reed-solomon", "erasure-coding", "simd", "gf256", "fec"]
categories = ["encoding", "algorithms"]

[dependencies]

[lib]
doctest = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = 1
